--- a/client/restaurant/src/app/components/login/login.component.html
+++ b/client/restaurant/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
         <mat-icon mat-list-icon>email</mat-icon>
         <span mat-line>
           <mat-form-field class="fullWidth">
-            <input matInput #email placeholder="Email">
+            <input matInput #email placeholder="Email" name="email">
           </mat-form-field>
         </span>
       </mat-list-item>
@@ -13,7 +13,7 @@
         <mat-icon mat-list-icon>lock</mat-icon>
         <span mat-line>
           <mat-form-field class="fullWidth">
-            <input matInput #password type="password" placeholder="Password">
+            <input matInput #password type="password" placeholder="Password" name="password">
           </mat-form-field>
         </span>
       </mat-list-item>
