--- a/client/restaurant/src/styles.css
+++ b/client/restaurant/src/styles.css
@@ -1,7 +1,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic";
-
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
@@ -11,7 +10,7 @@ body {
 .content {
   width: 50%;
   min-width: 500px;
-  margin: 114px auto 50px auto;
+  margin: 94px auto 0 auto;
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -28,7 +27,8 @@ body {
   width: calc(100% / 3);
 }
 
-mat-card {
+mat-card,
+mat-table {
   margin-bottom: 10px;
 }
 
